src/components/SignIn/signInPageStyles.css
.signInBackground {
  background: #ABBBCA;
  width: 100vw;
  height: 100vh;
  position: absolute;
  overflow-x: hidden;
  overflow-y: hidden;
}

.signInWrapper {
  margin: 150px auto 0;
  width: 25%;
  padding-top: 30px;
  background: #52657C;
  padding-right: 12px;
  height: 380px;
  transition: height .5s ease;
}

.navigation {
  margin-left: 35px;
}

.navList li {
  display: inline-block;
  margin-bottom: 80px;
}

.navList li a {
  color: #9DA9AF;
  text-transform: capitalize;
  text-decoration: none;
  font-size: 1.4em;
  border-bottom: transparent;
}

.navList li:first-child {
  margin-right: 30px;
}

.navList li.activeLink a {
  color: #FFF;
  border-bottom: 2px solid #47ACA3;
  padding-bottom: 14px;
  transition: border-bottom .3s ease, padding-bottom .3s ease;
}

.container {
  padding: 0 23px;
  overflow: hidden;
}

.signInLabel {
  font-weight: 400;
  font-family: 'Roboto Regular', Arial, Helvetica, sans-serif;
  text-transform: uppercase;
  font-size: 1.2em;
  padding-left: 15px;
  padding-bottom: 10px;
  color: rgba(255, 255, 255, .7);
  display: block;
}

.signInInputFields {
  width: 100%;
  height: 35px;
  color: #FFF;
  font-family: 'Roboto Regular', Arial, Helvetica, sans-serif;
  font-size: 1.04em;
  padding-left: 15px;
  border: 1px solid rgba(0, 0, 0, 0.0);;
  border-radius: 20px;
  margin-bottom: 20px;
  background: rgba(255, 255, 255, .2);
}

.signInInputFields.inputError {
  border: 1px solid #F00;
  transition: border .2s ease;
}

/**********************
* Handling Animations *
***********************/

.signInForm {
  margIn-right: 34px;
  position: relative;
  right: 0;
  transition: right .5s ease;
}

.signUpForm {
  position: relative;
  top: -239px;
  right: -540px;
  opacity: 0;
  transition: right .5s ease;
}

.slideInSignUpForm {
  animation: signInslideIn .5s ease forwards;
}

.slideOutSignUpForm {
  animation: signInslideOut .5s ease forwards;
}

.slideOutSignInForm {
  animation: signOutslideOut .5s ease forwards;
}

.slideInSignInForm {
  animation: signOutslideIn .5s ease forwards;
}

.expandForm {
  animation: slideHeightDown .5s ease forwards;
}

.resetHeight {
  animation: slideHeightUp .5s ease forwards;
}

@keyframes slideHeightDown {
  0% {
	height: 380px;
  }
  100% {
	height: 550px;
  }
}

@keyframes slideHeightUp {
  0% {
	height: 550px;
  }
  100% {
	height: 380px;
  }
}

@keyframes signOutslideOut {
  0% {
	right: 0;
  }
  100% {
	right: 470px;
  }
}

@keyframes signOutslideIn {
  0% {
	right: 470px;
  }
  100% {
	right: 0;
  }
}

@keyframes signInslideIn {
  0% {
	right: -540px;
	opacity: 0;
  }
  100% {
	right: 0;
	opacity: 1;
  }
}

@keyframes signInslideOut {
  0% {
	right: 0;
	opacity: 1;
  }
  100% {
	right: -540px;
	opacity: 0;
  }
}

